해게더 광고 내용 일부 수정

--- a/css/pc.css
+++ b/css/pc.css
@@ -764,5 +764,5 @@ header #header-bar:after
 	border: 9px double #ffb300;
 	border-radius: 19px;
 	text-align: center;
-	content: "※ HCK (롤 시참 대회) 진행 예정　|　일시 : 4월 11일(일) 오전 0시 ~　|　자세한 내용은 공지사항 확인 ※";
+	content: "※ HCK (롤 시참 대회) 진행 예정　|　일시 : 4월 11일(일) 0시 ~　|　자세한 내용 및 참가신청자는 공지사항 확인 ※";
 }
